Convert to using jre-tiny image